--- a/package.json
+++ b/package.json
@@ -5,21 +5,26 @@
   "scripts": {},
   "private": true,
   "devDependencies": {
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/cypress": "18.3.4",
     "@nx/eslint": "18.3.4",
     "@nx/eslint-plugin": "18.3.4",
     "@nx/jest": "18.3.4",
     "@nx/js": "18.3.4",
+    "@nx/nest": "^18.3.4",
     "@nx/node": "^18.3.4",
     "@nx/react": "^18.3.4",
     "@nx/vite": "^18.3.4",
     "@nx/web": "18.3.4",
+    "@nx/webpack": "^18.3.4",
     "@nx/workspace": "18.3.4",
     "@swc-node/register": "~1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@types/cookie-parser": "^1.4.7",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
@@ -46,16 +51,24 @@
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
     "@ts-rest/core": "^3.45.1",
     "@ts-rest/nest": "^3.45.1",
     "@ts-rest/react-query": "^3.45.1",
+    "axios": "^1.6.0",
+    "cookie-parser": "^1.4.6",
     "firebase": "^10.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.23.0",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
     "zod": "^3.23.6"
   }
