--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
+  "prisma": {
+    "schema": "apps/api/prisma/schema.prisma"
+  },
   "devDependencies": {
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.2",
@@ -47,6 +50,7 @@
     "jsdom": "~22.1.0",
     "nx": "18.3.4",
     "prettier": "^2.6.2",
+    "prisma": "^5.13.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.4.2",
@@ -58,12 +62,14 @@
     "@nestjs/common": "^10.0.2",
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
+    "@prisma/client": "^5.13.0",
     "@ts-rest/core": "^3.45.1",
     "@ts-rest/nest": "^3.45.1",
     "@ts-rest/react-query": "^3.45.1",
     "axios": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.23.0",
