--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@nestjs/core": "^10.0.2",
     "@nestjs/platform-express": "^10.0.2",
     "@prisma/client": "^5.13.0",
+    "@tanstack/react-query": "^4.0.0",
     "@ts-rest/core": "^3.45.1",
     "@ts-rest/nest": "^3.45.1",
     "@ts-rest/react-query": "^3.45.1",
@@ -76,6 +77,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
-    "zod": "^3.23.6"
+    "zod": "^3.23.6",
+    "zustand": "^4.5.2"
   }
 }
